# etfbench

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  questions.md
ai/: early-research.md  gemini-research.md
data/goldens/: capital_markets.json  creation_redemption.json  issuers.json
scripts/: convert_questions.py
src/etfbench/: __init__.py
src/etfbench/collectors/: __init__.py  edgar.py
src/etfbench/datasets/: __init__.py  loader.py  schema.py
src/etfbench/knowledge/: __init__.py
src/etfbench/metrics/: __init__.py  correctness.py  quantitative.py  regulatory.py
src/etfbench/processors/: __init__.py
src/etfbench/runners/: __init__.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/test_collectors/: __init__.py  test_edgar.py
tests/test_datasets/: __init__.py  test_loader.py  test_schema.py
tests/test_metrics/: __init__.py  test_correctness.py  test_quantitative.py  test_regulatory.py
