[project]
name = "etfbench"
version = "0.1.0"
description = "AI benchmark for ETF industry knowledge evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=3.2.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "ruff",
    "ty",
]
# Phase 4 dependencies (document collection)
docs = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
    "chromadb>=0.4",
    "sentence-transformers>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etfbench"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
